# camwatch-motion-detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md  camwatch.toml  compose.yaml
.github/workflows/: rust.yaml
docker/: camwatch.compose.toml
docs/: architecture.md  benchmarking.md  configuration.md  docker.md  mqtt-payload.md  testing.md
scripts/: benchmark-report-to-markdown.py  container-entrypoint.sh  run-benchmarks.sh
src/: app.rs  config.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  motion.rs  mqtt.rs  output.rs  session.rs
tests/: output_dimensions.rs  output_files.rs  video_fixtures.rs
tests/common/: mod.rs
tests/video/: .gitignore  README.md
