[package]
name = "camwatch-motion-detection"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Lightweight Rust CLI for motion detection on RTSP streams and video files"
readme = "README.md"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
rumqttc = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.15"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
unwrap_used = "deny"
